--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
+    "archiver": "^7.0.1",
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "firebase": "^12.7.0",
     "gifshot": "^0.4.5",
+    "googleapis": "^169.0.0",
+    "html2canvas": "^1.4.1",
     "jszip": "^3.10.1",
     "next": "^16.1.0",
     "qrcode.react": "^4.2.0",
@@ -28,6 +31,7 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@types/archiver": "^7.0.0",
     "@types/file-saver": "^2.0.7",
     "@types/jszip": "^3.4.0",
     "@types/node": "^25.0.3",
