menambahkan kode akses untuk masuk ke photobooth dan menambah limit di bagian admin dengan limit sesi dan atau waktu

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "gifshot": "^0.4.5",
     "googleapis": "^169.0.0",
     "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "jszip": "^3.10.1",
     "next": "^16.1.0",
     "qrcode.react": "^4.2.0",
