--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sentry/nextjs": "^10.32.1",
+    "@sentry/react": "^10.32.1",
+    "@sentry/tracing": "^7.120.4",
     "@supabase/supabase-js": "^2.89.0",
     "archiver": "^7.0.1",
     "cloudinary": "^2.8.0",
@@ -22,17 +25,20 @@
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "jszip": "^3.10.1",
+    "lucide-react": "^0.562.0",
     "next": "^16.1.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-hot-toast": "^2.6.0",
     "react-webcam": "^7.2.0",
+    "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@sentry/vite-plugin": "^4.6.1",
     "@types/archiver": "^7.0.0",
     "@types/file-saver": "^2.0.7",
     "@types/jszip": "^3.4.0",
